<resources>
    <string name="app_name">BBWeather</string>
    <string name="title_home">Home</string>
    <string name="title_settings">Settings</string>
    <string name="title_help">Help</string>
    <string name="move_map_hint">Move map to here</string>
    <string name="city">City</string>
    <string name="weather">Weather</string>
    <string name="remove_location_title">Remove Location</string>
    <string name="remove_location_message">Are you sure you want to remove this bookmarked location?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="location_bookmarked">New location bookmarked!</string>
    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="rain_volume">Rain Volume</string>
    <string name="wind">Wind</string>
    <string name="metric_temp">%1$s \u2103</string>
    <string name="imperial_temp">%1$s \u2109</string>
    <string name="atm_pressure">%1$s hPa</string>
    <string name="metric_speed">%1$s m/s</string>
    <string name="imperial_speed">%1$s MPH</string>
    <string name="percentage">%1$s %%</string>
    <string name="user_metric">Units</string>
    <string name="metric">Metric</string>
    <string name="imperial">Imperial</string>
    <string name="clear_locations">Clear Locations</string>
    <string name="clear">Clear</string>
    <string name="volume_mm">%1$s mm</string>
    <string name="clear_bookmarks_message">Are you sure you want to clear all your bookmarked locations?</string>
    <string name="degrees">%1$s &#176; / %2$s &#176;</string>
    <string name="no_network">No network connection.</string>
    <string name="forecast">5 Days Forecast</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
