<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context=".views.fragments.SettingsFragment">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/title_settings"
            app:titleTextColor="@color/icons" />
    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="10dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <Switch
            android:id="@+id/use_metric_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:checked="true"
            android:switchPadding="20dp"
            android:text="@string/user_metric"
            android:textColor="@color/primary_text"
            android:textOff="@string/imperial"
            android:textOn="@string/metric"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/unit_labels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/use_metric_switch"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/imperial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/imperial" />

            <Space
                android:layout_width="40dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/metric"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/metric" />
        </LinearLayout>

        <TextView
            android:id="@+id/clear_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/use_metric_switch"
            android:layout_below="@+id/unit_labels"
            android:layout_marginTop="20dp"
            android:text="@string/clear_locations"
            android:textColor="@color/primary_text"
            android:textSize="18sp" />

        <Button
            android:id="@+id/clear_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/clear_text"
            android:layout_below="@+id/clear_text"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/clear" />
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>